<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <!--<android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent">


    </android.support.v7.widget.RecyclerView>-->


    <ImageView
        android:id="@+id/mipmap"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:src="@mipmap/photo"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--tools:layout_editor_absoluteX="63dp"
    tools:layout_editor_absoluteY="0dp" -->
    <!--android:layout_centerHorizontal="true"-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mipmap"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="80dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/ic_action_dialer_sip" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="203dp"
        android:text="@string/angela_slater" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/imageView2"
        android:layout_alignEnd="@id/imageView2"
        android:layout_centerVertical="true"
        android:text="@string/height" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:progress="65"
        android:layout_marginBottom="214dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="181dp"
        android:text="@string/target" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="52dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_marginBottom="124dp"
        android:src="@drawable/community" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:text="@string/_textview" />


</RelativeLayout>
